--- a/mods/hud/changelog.txt
+++ b/mods/hud/changelog.txt
@@ -1,3 +1,8 @@
+2.1.3
+-----
+- Added hud.swap_statbar() and fix wrong behavior of previous workaround
+- Fixed missing background of some statbars in multiplayer
+
 2.1.2
 -----
 - Fixed crash caused by animated nodes (reported by Krock)
