Updated More_fire, Survival, and added some ABMs for grass.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2015-08-27:
+Updated More_fire and Survival
+Added a couple ABMs for grass spreading and growth.
+
 2015-08-26:
 Updated Valley_Mapgen.
 Added intersecting mod from paramat. Should be easier to find Goblins in underground caves with this.
