--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+2015-09-10:
+Major updates on traps. Currently you can only use raw meat to bait them. all buttons should be working in the formspecs.
+
+2015-09-09:
+Started work on ABMs for traps and did some minor coding changes in the nodes and formspecs
+
+
+2015-09-07:
+Updated Goblins Mod again.
+Added Pathv6 as a new mod.
+
+2015-09-04:
+Updated Goblins Mod again.
+Snare now has several states with different formspecs for each.
+
+
 2015-09-02:
 Updated More_fire to fix a few missing textures.
 Tweaked around grass growth and spread ABMs. Grass will now just grow on soils that have full grass texture on top, which should help with the disparity in looks.
