--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2016-01-17:
+Fixed a bug with Unified Inventory that could crash the game.
+Worked on adding the textures for the meats.
+Discovered that my groups aren't working, can't figure out why either.
+
 2016-01-13:
 Tweaked hunger and thirst speed.
 Added Goat mob.
