--- a/mods/hud/changelog.txt
+++ b/mods/hud/changelog.txt
@@ -1,3 +1,7 @@
+2.1.4
+-----
+- Fixed unhandled exception in hud.swap_statbar()
+
 2.1.3
 -----
 - Added hud.swap_statbar() and fix wrong behavior of previous workaround
